# gnome-builder

./: configure.ac
libide/application/: ide-application-actions.c
libide/buildsystem/: ide-builder.c
libide/greeter/: ide-greeter-perspective.c  ide-greeter-perspective.h
plugins/flatpak/: Makefile.am  gbp-flatpak-plugin.c  ide-flatpak-clone-widget.c  ide-flatpak-clone-widget.h  ide-flatpak-clone-widget.ui  ide-flatpak-genesis-addin.c  ide-flatpak-genesis-addin.h  ide-flatpak-resources.gresource.xml
plugins/meson/meson_plugin/: __init__.py
